[package]
name = "seasick"
version = "0.3.0"
edition = "2021"
authors = ["Aatif Syed <0xaatif@gmail.com>"]
homepage = "https://crates.io/crates/seasick"
documentation = "https://docs.rs/seasick"
repository = "https://github.com/aatifsyed/seasick"
license = "Apache-2.0 OR MIT"
description = "FFI-safe nul-terminated strings with ownership semantics"
keywords = ["ffi", "nul", "c_str", "transparent"]
categories = [
    "rust-patterns",
    "no-std::no-alloc",
    "external-ffi-bindings",
    "embedded",
    "development-tools::ffi",
]

[dependencies]
libc = { version = "0.2.166", default-features = false, optional = true }
seasick-macros = { version = "0.1.0", path = "macros", optional = true }

[features]
default = ["std", "libc", "macros"]
std = ["alloc", "libc?/std"]
alloc = []
libc = ["dep:libc"]
macros = ["dep:seasick-macros"]

[workspace]
members = ["fuzz", "macros"]
