[package]
name = "seasick-macros"
version = "0.1.1"
edition = "2024"
authors = ["Aatif Syed <0xaatif@gmail.com>"]
homepage = "https://crates.io/crates/seasick"
documentation = "https://docs.rs/seasick"
repository = "https://github.com/aatifsyed/seasick"
license = "Apache-2.0 OR MIT"
description = "FFI-safe nul-terminated strings with ownership semantics"

[dependencies]
attrs = "0.2.7"
proc-macro2 = { version = "1.0.95", default-features = false, features = [
    "proc-macro",
] }
quote = { version = "1.0.40", default-features = false, features = [
    "proc-macro",
] }
syn = { version = "2.0.101", default-features = false, features = [
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }

[lib]
proc-macro = true
